# LLL-training

./: .gitignore  BUILDING_REAL_LLM.md  HONESTY_IMPROVEMENT_PLAN.md  Makefile  QUICKSTART.md  README.md  data_example.json  pyproject.toml  yakimka_python_interview_questions.json
docs/: DEVICE_MONITORING.md  GENERATION_SPEED.md  REFACTORING.md
mini_llm/: mini_llm.py
mini_llm/v2/: explanations.md  mini_llm_2
mini_llm/v3/: QUICKSTART.md  README.md  STYLE_TRAINING.md  app.py  arbnet.txt  cli.py  corpus_prepared.json  corpus_v2.json  example_chat.txt  example_dialog.txt  model.py  prepare_corpus.py  test_corpus_prep.py
ocr/: .gitignore  README.md  ocr_app.py
pytorch_llm/: .gitignore  DATA_TOOLS.md  LOGS_VIEWER.md  QUICKSTART.md  README.md  __init__.py  analyze_json.py  api_server.py  app.py  attention.py  check_checkpoint.py  compare_checkpoints.py  config.py  convert_json.py  data.py  example.py  inference.py  inspect_checkpoint.py  inspect_chemistry.py  launcher.py  logger.py  model.py  ocr_app.py  plan_advice.md  run.sh  test_json_loading.py  test_load.py  test_monitoring.py  tokenizer.py  train.py  training.py
pytorch_llm/docs/: DEPLOYMENT.md  FINE_TUNING_GUIDE.md  HYBRID_AI_TUTOR_PLAN.md  JSON_FORMATS.md  JSON_QUICKSTART.md  JSON_SUPPORT.md  LOGGING.md  LOGGING_QUICKSTART.md  OCR_GUIDE.md  QUICKSTART_API.md  UI_FILE_SELECTOR.md  UI_IMPROVEMENTS.md
pytorch_llm/examples/: client_examples.py  use_pretrained.py
pytorch_llm/mlx_integration/: __init__.py  data_prep.py  inference.py  models_registry.py  trainer.py
pytorch_llm/rag/: schema.sql
(+25 files in other folders)
