[project]
name = "llm-learn"
version = "0.1.0"
description = "learn transformers"
authors = [
    {name = "Viachaslau Kazakou",email = "sly.kazakoff@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.6,<3.0.0)",
    "streamlit (>=1.45.0,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "torch (>=2.0.0,<3.0.0)",
    "tqdm (>=4.66.0,<5.0.0)",
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn[standard] (>=0.48.0,<0.49.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "watchdog (>=6.0.0,<7.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
